# foodshare-tools

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  SECURITY.md  install.sh  package.json  test-translation-system.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
bins/foodshare-android/: Cargo.toml
bins/foodshare-android/src/: main.rs
bins/foodshare-i18n/: Cargo.toml  README.md
bins/foodshare-i18n/src/: api.rs  config.rs  main.rs  types.rs
bins/foodshare-i18n/src/commands/: audit.rs  backfill.rs  bench.rs  deploy.rs  generate_infoplist.rs  health.rs  locales.rs  mod.rs  status.rs  test.rs  test_llm.rs  test_translation.rs  translate.rs  update.rs
bins/foodshare-ios/: Cargo.toml
bins/foodshare-ios/src/: main.rs
bins/foodshare-swift/: Cargo.toml
bins/foodshare-swift/src/: main.rs
bins/fs-image/: Cargo.toml
bins/fs-image/src/: main.rs
bins/lefthook-rs/: Cargo.toml
bins/lefthook-rs/src/: main.rs
crates/android/: Cargo.toml
crates/android/src/: emulator.rs  gradle.rs  kotlin_tools.rs  lib.rs  swift_android.rs  swift_core.rs
crates/api-client/: Cargo.toml
crates/api-client/src/: client.rs  config.rs  error.rs  lib.rs
crates/api-client/src/endpoints/: bff.rs  health.rs  localization.rs  mod.rs  products.rs  translations.rs
crates/api-client/src/middleware/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  output.rs  progress.rs
crates/compression/: Cargo.toml  README.md
crates/compression/benches/: compress.rs
crates/compression/src/: brotli_impl.rs  error.rs  etag.rs  gzip.rs  lib.rs  wasm.rs
crates/core/: Cargo.toml
crates/core/src/: audit.rs  cache.rs  error.rs  feature_flags.rs  file_scanner.rs  git.rs  health.rs  lib.rs  process.rs  rate_limit.rs  retry.rs  validation.rs
crates/core/src/config/: loader.rs  mod.rs  schema.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: error.rs  hmac_impl.rs  lib.rs  timing.rs  wasm.rs
crates/geo/: Cargo.toml  LICENSE  README.md
crates/geo/benches/: distance.rs
crates/geo/src/: batch.rs  error.rs  haversine.rs  lib.rs  postgis.rs  wasm.rs
crates/hooks/: Cargo.toml
crates/hooks/benches/: secrets_bench.rs
crates/hooks/src/: commit_msg.rs  lib.rs  migrations.rs  pre_push.rs  secrets.rs
crates/image/: Cargo.toml  README.md
crates/image/benches/: resize.rs
crates/image/src/: alpha.rs  detect.rs  error.rs  lib.rs  metadata.rs  resize.rs  smart_width.rs
crates/ios/: Cargo.toml
crates/ios/src/: code_protection.rs  hooks.rs  lib.rs  simulator.rs  swift_tools.rs  xcode.rs  xcodeproj.rs
crates/search/: Cargo.toml  README.md
crates/search/src/: error.rs  fuzzy.rs  lib.rs  relevance.rs  wasm.rs
crates/swift-toolchain/: Cargo.toml  README.md
crates/swift-toolchain/src/: config.rs  detect.rs  error.rs  lib.rs  migrate.rs  verify.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: accessibility.rs  bundle_size.rs  lib.rs  nextjs_security.rs
docs/: README.md  architecture.md  cli-reference.md  configuration.md  development.md  getting-started.md
docs/crates/: README.md  android.md  cli.md  compression.md  core.md  crypto.md  geo.md  hooks.md  image.md  ios.md  motherduck-sync.md  search.md  telemetry.md  web.md
scripts/: translate.sh
tests/swift/: FoodItemTests.swift  ProfileValidatorTests.swift  ReviewValidatorTests.swift  TextSanitizerTests.swift
