[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/hooks",
    "crates/cli",
    "crates/ios",
    "crates/android",
    "crates/web",
    "bins/foodshare-ios",
    "bins/foodshare-android",
    "bins/lefthook-rs",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Foodshare Team"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }

# Terminal Output
owo-colors = { version = "4.0", features = ["supports-colors"] }
colored = "2.1"
indicatif = "0.17"
console = "0.15"

# Parallelism
rayon = "1.8"

# File System
walkdir = "2.4"
glob = "0.3"

# Pattern Matching
regex = "1.10"
once_cell = "1.19"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Process Execution
# which = "5.0"  # Removed due to edition2024 dependency

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Date/Time
chrono = "0.4"

# UUID Generation
uuid = { version = "1.0", features = ["v4"] }

# Git Operations
# Using command-line git instead of git2 to avoid edition2024 dependency issues

# Shell expansion
shellexpand = "3.1"

# Home directory
dirs = "5.0"

# Temp files
tempfile = "3.10"

# Graph algorithms (dependency analysis)
petgraph = "0.6"

# Template rendering (code generation)
handlebars = "5.1"

# Compression (xcactivitylog parsing)
flate2 = "1.0"

# Pin transitive dependencies to avoid edition2024 issue
# home = "=0.5.9"
# globset = "=0.4.14"

# Internal crates
foodshare-core = { path = "crates/core" }
foodshare-hooks = { path = "crates/hooks" }
foodshare-cli = { path = "crates/cli" }
foodshare-ios = { path = "crates/ios" }
foodshare-android = { path = "crates/android" }
foodshare-web = { path = "crates/web" }

[workspace.dependencies.proptest]
version = "1.4"

[workspace.dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[workspace.dependencies.tokio-test]
version = "0.4"
