[package]
name = "foodshare-android-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for Foodshare Android development"

[[bin]]
name = "foodshare-android"
path = "src/main.rs"

[dependencies]
foodshare-core.workspace = true
foodshare-hooks.workspace = true
foodshare-cli.workspace = true
foodshare-android.workspace = true
clap.workspace = true
anyhow.workspace = true
owo-colors.workspace = true
