[package]
name = "foodshare-ios-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for Foodshare iOS development"

[[bin]]
name = "foodshare-ios"
path = "src/main.rs"

[dependencies]
foodshare-core.workspace = true
foodshare-hooks.workspace = true
foodshare-cli.workspace = true
foodshare-ios.workspace = true
clap.workspace = true
anyhow.workspace = true
owo-colors.workspace = true
