[package]
name = "foodshare-swift"
version = "0.1.0"
edition = "2021"
authors = ["Foodshare Team"]
description = "Swift toolchain version management CLI"
license = "MIT"

[[bin]]
name = "foodshare-swift"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
anyhow = "1.0"
colored = "2.1"
serde_json = "1.0"
owo-colors = "4.0"

# Shared crates
foodshare-swift-toolchain = { path = "../../crates/swift-toolchain" }
foodshare-core = { path = "../../crates/core" }
foodshare-cli = { path = "../../crates/cli" }

# Utilities
dirs = "5.0"
