[package]
name = "lefthook-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Fast git hooks for Foodshare web (Next.js/React)"

[[bin]]
name = "lefthook-rs"
path = "src/main.rs"

[dependencies]
foodshare-core.workspace = true
foodshare-hooks.workspace = true
foodshare-cli.workspace = true
foodshare-web.workspace = true
clap.workspace = true
anyhow.workspace = true
owo-colors.workspace = true
