[package]
name = "foodshare-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core utilities for Foodshare development tools"
readme = "README.md"
keywords = ["cli", "git", "development-tools"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
full = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
walkdir.workspace = true
glob.workspace = true
regex.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
shellexpand.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
