[package]
name = "foodshare-geo"
description = "High-performance geospatial utilities for distance calculations and PostGIS parsing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["geospatial", "distance", "haversine", "postgis", "coordinates"]
categories = ["algorithms", "mathematics", "wasm"]
exclude = ["pkg/"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true, optional = true }

# WASM dependencies (feature-gated)
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[features]
default = ["parallel"]
parallel = ["rayon"]
wasm = ["wasm-bindgen", "js-sys", "getrandom"]

[[bench]]
name = "distance"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]
