[package]
name = "foodshare-swift-toolchain"
version = "0.1.0"
edition = "2021"
authors = ["Foodshare Team"]
description = "Swift toolchain version management for Foodshare monorepo"
license = "MIT"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"

# File system
walkdir = "2.5"
glob = "0.3"
dirs = "5.0"

# Process execution
which = "6.0"

# Shared crates
foodshare-core = { path = "../core" }
foodshare-cli = { path = "../cli" }

[dev-dependencies]
tempfile = "3.10"
