[package]
name = "foodshare-telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Telemetry, metrics, and observability for Foodshare tools"

[features]
default = ["metrics"]
metrics = []
tracing = []
full = ["metrics", "tracing"]

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
metrics.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
once_cell.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
